# spiderweb

./: .gitignore  LICENSE  requirements.txt  setup.cfg
spiderweb/: README.md  pyproject.toml
spiderweb/src/spiderweb/: Commands.py  README.rst  WebRequests.py  all2.txt  bruter.py  guidedAttackTree.py  notes.md  requirements.txt  scraping.py  scratch.py  setup.py  spiderweb.py  vulnTest.py
