[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "spiderweb"
authors = [
    {name = "Robert Samoraj", email = "rsamoraj11@gmail.com"},
]
description = "Web app exploitation helper tool"
readme = "README.md"
version = "0.1.0"
dependencies = [
    "requests",
    "beautifulsoup4",
]